@startuml

title __FIFTHEXAMPLE's Class Diagram__\n

  namespace com.twdt.netty {
    namespace fifthexample {
      class com.twdt.netty.fifthexample.MyServer {
          {static} ~ PORT : int
          {static} ~ SSL : boolean
          {static} + main()
      }
    }
  }
  

  namespace com.twdt.netty {
    namespace fifthexample {
      class com.twdt.netty.fifthexample.WebSocketChannelInitializer {
          - sslCtx : SslContext
          + WebSocketChannelInitializer()
          # initChannel()
      }
    }
  }
  

  namespace com.twdt.netty {
    namespace fifthexample {
      class com.twdt.netty.fifthexample.WebsocketServerHandler {
          + exceptionCaught()
          + handlerAdded()
          + handlerRemoved()
          # channelRead0()
      }
    }
  }
  

  com.twdt.netty.fifthexample.WebSocketChannelInitializer -up-|> io.netty.channel.ChannelInitializer
  com.twdt.netty.fifthexample.WebsocketServerHandler -up-|> io.netty.channel.SimpleChannelInboundHandler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
